v0.5.0/_sources/gallery/seismology/meca.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/seismology/meca.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_seismology_meca.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_seismology_meca.py:


Focal mechanisms
----------------

The :meth:`pygmt.Figure.meca` method can plot focal mechanisms, or beachballs.
We can specify the focal mechanism nodal planes or moment tensor components as
a dict using the ``spec`` parameter (or they can be specified as a 1d or 2d
array, or within a specified file). The size of plotted beachballs can be
specified using the ``scale`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 11-34



.. image-sg:: /gallery/seismology/images/sphx_glr_meca_001.png
   :alt: meca
   :srcset: /gallery/seismology/images/sphx_glr_meca_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import pygmt

    fig = pygmt.Figure()

    # generate a basemap near Washington state showing coastlines, land, and water
    fig.coast(
        region=[-125, -122, 47, 49],
        projection="M6c",
        land="grey",
        water="lightblue",
        shorelines=True,
        frame="a",
    )

    # store focal mechanisms parameters in a dict
    focal_mechanism = dict(strike=330, dip=30, rake=90, magnitude=3)

    # pass the focal mechanism data to meca in addition to the scale and event
    # location
    fig.meca(focal_mechanism, scale="1c", longitude=-124.3, latitude=48.1, depth=12.0)

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.978 seconds)


.. _sphx_glr_download_gallery_seismology_meca.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: meca.py <meca.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: meca.ipynb <meca.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
